# Project_chimera

./: .coderabbit.yml  CLAUDE.md  Dockerfile  Makefile  pyproject.toml
.cursor/: rules
.github/: copilot-instructions.md
.github/workflows/: main.yml
research/: tooling_strategy.md
skills/: README.md  skill_fetch_trends.py
skills/skill_generate_script/: skill_generate_script.py
skills/skill_publish_video/: skill_publish_video.py
specs/: _meta.md  functional.md  skill_fetch_trends.md  skill_generate_script.md  technical.md
tests/: test_skills_interface.py  test_trend_fetcher.py
tests/integration/: test_placeholder.py
tests/unit/: test_failing.py  test_fetch_trends_unsupported_platform.py  test_generate_script_contract.py
