[project]
name = "project-chimera"
version = "0.1.0"
description = "Project Chimera - Autonomous Influencer Network (Spec-Driven Agentic Infrastructure)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"
